...
    deinit { if let id = requestID { model.asset.cancelContentEditingInputRequest(id) } }

    override func viewDidLoad() {
        super.viewDidLoad()
        title = tr(.beautify)
        navigationItem.leftBarButtonItem = UIBarButtonItem(title: tr(.cancel), style: .plain, target: self, action: #selector(cancel))
        doneButton.accessibilityIdentifier = "editor-done"
        doneButton.isEnabled = false
        navigationItem.rightBarButtonItem = doneButton
        view.addSubview(activity)
        activity.snp.makeConstraints { $0.center.equalToSuperview() }
        activity.startAnimating()
        let options = PHContentEditingInputRequestOptions()
...
